--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,7 +67,7 @@ jobs:
            docker --version
            bash ./scripts/stop.sh
 
-      - name: Deploy App
+      - name: Build Image
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.HOST }}
@@ -77,3 +77,15 @@ jobs:
           script: |
             cd gift
             docker build -t prod .
+            
+      - name: Deploy Image
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          password: ${{ secrets.PASSWORD }}
+          port: 22
+          script: |
+            cd gift
+            docker run -d prod
+      
