--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,16 +98,7 @@ jobs:
             cd gift
             docker run -d prod
 
-      - name: Serve ft.Apache
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          password: ${{ secrets.PASSWORD }}
-          port: 22
-          script: |
-            cd gift
-                  - name: Deploy Image
+      - name: Serve
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.HOST }}
