--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,4 +113,4 @@ jobs:
 
             cp ./ngnix.conf /etc/nginx/nginx.conf
 
-            sudo systemctl restart nginx
+            sudo systemctl start nginx
