take site livegit add . :D

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -114,4 +114,4 @@ jobs:
             cp ./ngnix.conf /etc/nginx/nginx.conf
 
             sudo less /var/log/nginx/error.log
-            #sudo systemctl restart nginx
+            sudo systemctl restart nginx
