--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,7 +96,7 @@ jobs:
           port: 22
           script: |
             cd gift
-            docker run -d prod
+            docker run -d -p 3000:3000 prod
 
       - name: Serve
         uses: appleboy/ssh-action@v1.0.3
