--- a/react/package.json
+++ b/react/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^4.30.7",
+    "@clerk/clerk-react": "5.0.1-canary.v4e31fca",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "react": "^18.2.0",
