--- a/react/package.json
+++ b/react/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "5.0.1-canary.v4e31fca",
+    "@clerk/themes": "^1.7.10",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "react": "^18.2.0",
